argocd-apps/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: dev  # або prod, якщо для продакшену
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dev.myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-myapp-service
            port:
              number: 80
  - host: prod.myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-myapp-service
            port:
              number: 80
